WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282316
[css-values] Fix CSSAttrValue Fallback comparation
https://bugs.webkit.org/show_bug.cgi?id=282316
Summary
[css-values] Fix CSSAttrValue Fallback comparation
Alexsander Borges Damaceno
Reported
2024-10-29 21:42:32 PDT
Fix CSSAttrValue Fallback comparation
Attachments
Add attachment
proposed patch, testcase, etc.
Alexsander Borges Damaceno
Comment 1
2024-10-29 21:54:53 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35930
EWS
Comment 2
2024-11-03 13:11:34 PST
Committed
286063@main
(941a1f1fa937): <
https://commits.webkit.org/286063@main
> Reviewed commits have been landed. Closing PR #35930 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-11-03 13:12:13 PST
<
rdar://problem/139166330
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug