[css-values] Fix CSSAttrValue Fallback comparation https://bugs.webkit.org/show_bug.cgi?id=282316

Reviewed by Tim Nguyen.

When comparing two CSSAttrValue instances in the equals function for example, attr(foo) and attr(foo, "fallback"), the result incorrectly returns true.
This happens because the check was only validating cases where both instances have fallback values
but missed handling the scenario where only one instance has a fallback value.

* Source/WebCore/css/CSSAttrValue.cpp:
(WebCore::CSSAttrValue::equals const):

Canonical link: https://commits.webkit.org/286063@main